data loading and graphed

--- a/machine-learning-ex1/sandbox.ipynb
+++ b/machine-learning-ex1/sandbox.ipynb
@@ -2,20 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from matplotlib import pyplot\n",
+    "from matplotlib import pyplot as plt\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +50,7 @@
        "       [ 0.,  0.,  0.,  0.,  1.]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,76 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "b = np.identity(5)"
+    "data=np.loadtxt('ex1data1.txt',delimiter=',')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  1.]])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/j/github/machine-learning/machine-learning-ex1'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -130,13 +81,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.TextIOWrapper name='ex1data1.txt' mode='r' encoding='UTF-8'>\n"
+      "[  6.1101   5.5277   8.5186   7.0032   5.8598   8.3829   7.4764   8.5781\n",
+      "   6.4862   5.0546   5.7107  14.164    5.734    8.4084   5.6407   5.3794\n",
+      "   6.3654   5.1301   6.4296   7.0708   6.1891  20.27     5.4901   6.3261\n",
+      "   5.5649  18.945   12.828   10.957   13.176   22.203    5.2524   6.5894\n",
+      "   9.2482   5.8918   8.2111   7.9334   8.0959   5.6063  12.836    6.3534\n",
+      "   5.4069   6.8825  11.708    5.7737   7.8247   7.0931   5.0702   5.8014\n",
+      "  11.7      5.5416   7.5402   5.3077   7.4239   7.6031   6.3328   6.3589\n",
+      "   6.2742   5.6397   9.3102   9.4536   8.8254   5.1793  21.279   14.908\n",
+      "  18.959    7.2182   8.2951  10.236    5.4994  20.341   10.136    7.3345\n",
+      "   6.0062   7.2259   5.0269   6.5479   7.5386   5.0365  10.274    5.1077\n",
+      "   5.7292   5.1884   6.3557   9.7687   6.5159   8.5172   9.1802   6.002\n",
+      "   5.5204   5.0594   5.7077   7.6366   5.8707   5.3054   8.2934  13.394\n",
+      "   5.4369]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x112896c88>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = open(\"ex1data1.txt\")\n",
-    "print(f)"
+    "X = data[:,0]\n",
+    "print(X)\n",
+    "pyplot.scatter(data[:,0],data[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# https://github.com/KristenMoore/Linear-Regression-in-python/blob/master/linear%20regression.py\n",
+    "import numpy as np\n",
+    "from numpy import zeros, ones, reshape, array, linspace, logspace, add, dot, transpose, shape, negative\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pylab import scatter, show, title, xlabel, ylabel, plot, contour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt('ex1data1.txt',delimiter=',')\n",
+    "plt.scatter(data[:,0],data[:,1])\n",
+    "plt.ylabel('Profit in $10,000s')\n",
+    "plt.xlabel('Population in 10,000s')\n",
+    "plt.show()\n"
    ]
   }
  ],
