octave submission working, importing python exercise

--- a/machine-learning-ex1/sandbox.ipynb
+++ b/machine-learning-ex1/sandbox.ipynb
@@ -130,18 +130,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "\n",
+    "import numpy as np\n",
+    "from numpy import zeros, ones, reshape, array, linspace, logspace, add, dot, transpose, shape, negative\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pylab import scatter, show, title, xlabel, ylabel, plot, contour\n",
+    "\n",
+    "# ======= load and visualise the dataset =======\n",
     "data=np.loadtxt('ex1data1.txt',delimiter=',')\n",
     "plt.scatter(data[:,0],data[:,1])\n",
     "plt.ylabel('Profit in $10,000s')\n",
     "plt.xlabel('Population in 10,000s')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# ======= format the data =======\n",
+    "x=data[:,0]\n",
+    "Y=data[:,1]\n",
+    "m=len(Y)\n",
+    "y=reshape(Y,(m,1))\n",
+    "\n",
+    "X = ones(shape=(m, 2))\n",
+    "X[:, 1] = x\n",
+    "\n",
+    "\n",
+    "    \n",
+    "# ======= define the cost function J for linear regression =======\n",
+    "def cost_function(theta, X, y):\n",
+    "        prediction=dot(X,theta)\n",
+    "        J = (1.0/(2*m))*dot(transpose(prediction-y),(prediction-y))               \n",
+    "        return J\n",
+    "\n",
+    "    \n",
+    "# ======= Gradient Descent =======\n",
+    "# define function for batch gradient descent\n",
+    "def gradient_descent(theta, X, y, alpha, num_iters):\n",
+    "    m=len(y)\n",
+    "    J_history = zeros(shape=(num_iters, 1))\n",
+    "\n",
+    "    for i in range(num_iters):\n",
+    "        theta=theta-(alpha/m)*(dot(transpose(X),(dot(X,theta)-y)))\n",
+    "        J_history[i] = cost_function(theta, X, y)\n",
+    "    return theta, J_history\n",
+    "\n",
+    "# set parameters for gradient descent\n",
+    "alpha = 0.01\n",
+    "iterations = 1500\n",
+    "theta = zeros(shape=(2, 1)) \n",
+    "\n",
+    "#compute and display initial cost\n",
+    "print('Initial cost: '+str(cost_function(theta,X,y)[0][0]))\n",
+    "\n",
+    "# perform gradient descent \n",
+    "theta, J_history = gradient_descent(theta, X, y, alpha, iterations)\n",
+    "print('Theta found by gradient descent: '+str(theta[0][0])+', '+str(theta[1][0]))\n",
+    "\n",
+    "# visualise outcome\n",
+    "def plot_solution(x,y,solution):\n",
+    "    # create figure and axes\n",
+    "    fig = plt.figure()\n",
+    "    # split the page into a 1x1 array of subplots and put solution in the first one (111)\n",
+    "    ax = fig.add_subplot(111)\n",
+    "\n",
+    "    # plots scatter for x, y\n",
+    "    ax.scatter(x, y, color='red', marker='o', s=100)\n",
+    "    # plots solution\n",
+    "    ax.plot(x, solution, color='green')\n",
+    "    plt.show()\n",
+    "plot_solution(x,Y,dot(X,theta))\n",
+    "\n",
+    "# ======= visualise cost function J over a grid of values for theta =======\n",
+    "theta0_vals=linspace(-10,10,100);\n",
+    "theta1_vals=linspace(-1,4,100);\n",
+    "J_vals=zeros(shape=(len(theta0_vals),len(theta1_vals)));\n",
+    "\n",
+    "for i, elementi in enumerate(theta0_vals):\n",
+    "    for j, elementj in enumerate(theta1_vals):\n",
+    "        thetatest=zeros(shape=(2,1))\n",
+    "        thetatest=[[elementi],[elementj]]\n",
+    "        J_vals[i][j]= cost_function(thetatest, X, y)\n",
+    "\n",
+    "# We need to transpose J_vals before plotting it\n",
+    "J_vals=transpose(J_vals)\n",
+    "\n",
+    "contour(theta0_vals, theta1_vals, J_vals, logspace(-2, 3, 20))\n",
+    "xlabel(r'$\\theta_0$')\n",
+    "ylabel(r'$\\theta_1$')\n",
+    "show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
